# gymnasium-gomokurs

./: .gitignore  README.md  pyproject.toml
examples/: main.ipynb  main.py
gymnasium_gomokurs/adapters/manager_interfaces/tcp/: action_ids.py  manager_interface.py
gymnasium_gomokurs/domain/gymnasium_gomokurs/: ports.py  service.py
gymnasium_gomokurs/domain/gymnasium_gomokurs/models/: actions.py  game.py
gymnasium_gomokurs/gomokurs_tcp/: interface.py
