[project]
name = "gymnasium-gomokurs"
version = "0.1.0"
description = "A gymnasium environment for gomoku"
authors = [
    {name = "Guilhem Santé",email = "guilhem.snt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gymnasium (>=1.0.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torch-vision (>=0.1.6.dev0,<0.2.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
]
license = "MIT"
license-files = ["LICENSE"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
